--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,12 +16,12 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <% link_to 'saas', root_path, class: 'navbar-brand' %>
+      <%= link_to 'saas', root_path, class: 'navbar-brand' %>
     </div>
     
     <div class="collapse navbar-collapse" id="main-nav-collapse">
       <ul class="nav navbar-nav navbar-right">
-        <li><%= link_to "about", "#" %></li>
+        <li><%= link_to "about", about_path %></li>
       </ul>
       
     </div><!-- /.navbar-collapse -->
